--- a/demo.ipynb
+++ b/demo.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "Row(text='the rock is destined to be the 21st century\\'s new \" conan \" and that he\\'s going to make a splash even greater than arnold schwarzenegger , jean-claud van damme or steven segal .', label=1)"
+       "Row(text='the rock is destined to be the 21st century\\'s new \" conan \" and that he\\'s going to make a splash even greater than arnold schwarzenegger , jean-claude van damme or steven seagal.', label=1)"
       ]
      },
      "execution_count": 6,
@@ -371,7 +371,7 @@
    "source": [
     "## Load a dataset with multiple shards\n",
     "\n",
-    "This example is using the [amazon_popularity dataset](https://huggingface.co/datasets/fancyzhx/amazon_polarity) which has 4 shards (for train split)"
+    "This example is using the [amazon_polarity dataset](https://huggingface.co/datasets/fancyzhx/amazon_polarity) which has 4 shards (for train split)"
    ],
    "id": "d8481e86aeb61aaf"
   },
