--- a/demo.ipynb
+++ b/demo.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "Row(text='the rock is destined to be the 21st century\\'s new \" conan \" and that he\\'s going to make a splash even greater than arnold schwarzenegger , jean-claude van damme or steven seagal.', label=1)"
+       "Row(text='the rock is destined to be the 21st century\\'s new \" conan \" and that he\\'s going to make a splash even greater than arnold schwarzenegger , jean-claud van damme or steven segal .', label=1)"
       ]
      },
      "execution_count": 6,
